--- a/Week1_Questionnaire/index.html
+++ b/Week1_Questionnaire/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="assets/assets/main.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 1</title>
 </head>
@@ -61,7 +65,7 @@
                 </ul>
             
             <li> Insert an image that brings you joy to the page</li>
-            <img src="assets\imgs\porshe911.jpg" alt="Porsche 911 gt3 in a cool aquarium tunnel" width="700px">
+            <img src="assets\assets\porshe911.jpg" alt="Porsche 911 gt3 in a cool aquarium tunnel" width="700px">
             
             <li> Insert a video embed into the page </li>
             <iframe width="700" height="450" src="https://www.youtube.com/embed/UG3sfZKtCQI" title=deadmau5-monophobia" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
