--- a/Week3_Colophon/index.html
+++ b/Week3_Colophon/index.html
@@ -21,7 +21,7 @@
             <div> 
                 <p>
                 Typefaces Used: <br>
-                [1] OldSchool: Web437_IBM_EGA_9x14-2x
+                [1] OldSchool - IBM_EGA_9x14-2x
                 </p>
             </div>
         </article>
@@ -36,7 +36,7 @@
             </div>
             <div> 
                 <p>
-                This page was written with my knowledge of HTML and CSS, using flexbox to adjust to different aspect ratios and keep organization of my texts. 
+                This page was written with my knowledge of HTML and CSS, using flexbox for different aspect ratios and keep organization of my texts. 
                 The website is entirely in black and white with a subtle secondary color. 
                 My theme is an old school dungeon-crawler game, exploring different rooms that reveal part of the text. 
                 My twist is that you will be exploring the text-dungeon in first-person--walking into rooms and interacting with certain objects to reveal the text. 
