--- a/Week3_Colophon/index.html
+++ b/Week3_Colophon/index.html
@@ -11,7 +11,7 @@
     <section> 
         <article>
             <h1> Angel Yu</h1>
-            <div class="space"> ?!.;:'"</div>
+            <div class="space"> ?.!<br>;':</div>
             <div> 
                 <p>
                 > On Punctuation <br>
@@ -21,7 +21,7 @@
             <div> 
                 <p>
                 Typefaces Used: <br>
-                [1] OldSchool - IBM_EGA_9x14-2x
+                <a href="https://int10h.org/oldschool-pc-fonts/fontlist/font?ibm_bios">[1] OldSchool - IBM_BIOS </a>
                 </p>
             </div>
         </article>
@@ -31,7 +31,7 @@
                 <p>
                     Core 2: Interaction, Spring 2023 <br>
                     Date: 2-2-2023 <br>
-                    <a href="https://writing.upenn.edu/epc/authors/goldsmith/works/stein.pdf"> Original Text -</a> <a href="https://github.com/Core-2-Interaction-Lab/AngelYu_Interaction"> Github </a>
+                    <a href="https://writing.upenn.edu/epc/authors/goldsmith/works/stein.pdf"> Original Text </a>-<a href="https://github.com/Core-2-Interaction-Lab/AngelYu_Interaction"> Github </a>
                 </p>
             </div>
             <div> 
