--- a/index.html
+++ b/index.html
@@ -59,3 +59,4 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <a href="Week3_Colophon"> Week 3 - Colophon</a>
     </section>
 </body>
+</html>
