--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section>
+      <article>
     <pre>                                                                    
                                        ???????????????????????????????                              
                                    ?????????????????????????????????????????                        
@@ -53,10 +54,12 @@ Angel Yu            ???????Xx'......'''.............................'...........
 ?????????????????????Xo..';;::;;;,..,;;;;;;;;;;,;;;;;;;;,...;;;;;;;;;;;;;;;;;;;;;'.;xX??????????????
 XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''''..c0KKXXXXXXXXXXXX
 </pre>
- 
-    <a href="Week1_Questionnaire"> Week 1 - Questionnaire</a>
-    <a href="https://www.youtube.com/watch?v=BUZIaTHm_oE&ab_channel=LaurelVideo">Week 2 - CSS Video</a>
-    <a href="Week3_Colophon"> Week 3 - Colophon</a>
+</article>
+  <article>
+    <div><a href="Week1_Questionnaire"> Week 1 - Questionnaire</a></div>
+    <div><a href="https://www.youtube.com/watch?v=BUZIaTHm_oE&ab_channel=LaurelVideo">Week 2 - CSS Video</a></div>
+    <div><a href="Week3_Colophon"> Week 3 - Colophon</a> </div>
+  </article>
     </section>
 </body>
 </html>
