--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Week1_Questionnaire"> Week 1 - Questionnaire</a></div>
     <div><a href="https://www.youtube.com/watch?v=BUZIaTHm_oE&ab_channel=LaurelVideo">Week 2 - CSS Video</a></div>
     <div><a href="Week3_Colophon"> Week 3 - Colophon</a> </div>
+    <div><a href="Project1"> Project 1</a></div>
   </article>
     </section>
 </body>
