--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="https://www.youtube.com/watch?v=BUZIaTHm_oE&ab_channel=LaurelVideo">Week 2 - CSS Video</a></div>
     <div><a href="Week3_Colophon"> Week 3 - Colophon</a> </div>
     <div><a href="Project1"> Project 1</a></div>
+    <div><a href="Week4_Exercise"> Week 4 - Exercise</a> </div>
   </article>
     </section>
 </body>
