--- a/Week3_Colophon/index.html
+++ b/Week3_Colophon/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/main.css">
+    <script src="assets/main.js"> </script>
     <title>Colophon</title>
 </head>
 <body>
@@ -34,16 +35,9 @@
                     <a href="https://writing.upenn.edu/epc/authors/goldsmith/works/stein.pdf"> Original Text </a>-<a href="https://github.com/Core-2-Interaction-Lab/AngelYu_Interaction"> Github </a>
                 </p>
             </div>
-            <div> 
-                <p>
-                This page was written with my knowledge of HTML and CSS, using flexbox for different aspect ratios and keep organization of my texts. 
-                The website is entirely in black and white with a subtle secondary color. 
-                My theme is an old school dungeon-crawler game, exploring different rooms that reveal part of the text. 
-                My twist is that you will be exploring the text-dungeon in first-person--walking into rooms and interacting with certain objects to reveal the text. 
-                There will be dead-ends in the dungeon to help communicate the end of a paragraph, and also a final room or an escape to communicate the end of the text. 
-                </p>
-                <p> "They could begin to act as they thought best and one might interrupt one’s writing with them that is not really interrupt one’s writing with them but one could come to stop arbitrarily stop at times in one’s writing and so they could be used and you could use them Periods could come to exist in this way and they could come in this way to have a life of their own."</p>
-             </div>
+            <div id = "typewriter-box"></div>
+            <script type="text/javascript" src="assets/main.js"></script>
+        
         </article>
     </section>
 </body>
