--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ XXXXXXXXXXXXXXXXXXXKXKd;;,'..''............................................'''''
     <div><a href="Project1"> Project 1</a></div>
     <div><a href="Week4_Exercise"> Week 4 - Exercise</a> </div>
   </article>
+  <article>
+    <div><a href="js test\typewriter"> Java tests </a></div>
+  </article>
     </section>
 </body>
 </html>
