--- a/Project1/index.html
+++ b/Project1/index.html
@@ -5,68 +5,68 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/main.css">
+    <script src="assets/main.js"> </script>
     <title>Project 1</title>
 </head>
 <body>
+    <div> 
+        <p> There are some punctuations that are interesting and there are some punctuations that are not.</p>
+   </div>
     <section>
-        <article>
-    <div> <p> There are some punctuations that are interesting and there are some punctuations that are not.</p></div>
-         </article>
          <article>
-        <pre class="door">
-            ???????????????????????????????
-            ???????????????????????????????
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???    Let us begin with    ???
-            ???    the punctuations     ???
-            ???      that are not       ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???                         ???
-            ???????????????????????????????
+    <div class="knob" onclick="togglePre()">?</div>
+        <pre id="door">
+???????????????????????????????
+???????????????????????????????
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???    Let us begin with    ???
+???    the punctuations     ???
+???      that are not       ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???????????????????????????????
         </pre>
-    </div>
-    <div class="knob">?</div>
-        <p> On Punctuation <br> Colophon</p>
-        <pre class="door2">
-            +++++++++++++++++++++++++++++++
-            +++++++++++++++++++++++++++++++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                     +   +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++                         +++
-            +++++++++++++++++++++++++++++++
+        
+        <p class="mid"> On Punctuation <br> Colophon </p>
+        <pre id="door2">
++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                     +   +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++++++++++++++++++++++++++++++
             </pre>
-    </div>
     </article>
     </section>
     <div class="chat"> 
