--- a/Project1/exclamation/index.html
+++ b/Project1/exclamation/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <script src="main.js"> </script>
+    <title>Exclamation</title>
 </head>
 <body>
     <section>
         <article>
             <div>
-                <p> Exclamation marks have the same difficulty and also quotation marks, they are unnecessary, they are ugly, they spoil the line of the writing or the printing and anyway what is the use, if you do not know that a question is a question what is the use of its being a question.</p>
+                <div id = "typewriter-box"></div>
+                <script type="text/javascript" src="main.js"></script>
             </div>
             <div> 
                 <pre class="door">
