--- a/Project1/ending/index.html
+++ b/Project1/ending/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <script src="main.js"> </script>
+    <title>The End</title>
 </head>
 <body>
+    <div id = "typewriter-box"></div>
+    <script type="text/javascript" src="main.js"></script>
     
 </body>
 </html>
