--- a/Project1/exclamation/index.html
+++ b/Project1/exclamation/index.html
@@ -16,55 +16,55 @@
                 <script type="text/javascript" src="main.js"></script>
             </div>
             <div> 
-                <pre class="door">
-                    """""""""""""""""""""""""""""""
-                    """""""""""""""""""""""""""""""
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """                         """
-                    """""""""""""""""""""""""""""""
+                <pre id="door">
+"""""""""""""""""""""""""""""""
+"""""""""""""""""""""""""""""""
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""""""""""""""""""""""""""""""
                 </pre>
-                <pre class="door2">
-                    *******************************
-                    *******************************
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    ***                         ***
-                    *******************************
+                <pre id="door2">
+*******************************
+*******************************
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+*******************************
                 </pre>
             </div>
         </article>
