--- a/Project1/question/index.html
+++ b/Project1/question/index.html
@@ -15,58 +15,58 @@
                 <div id = "typewriter-box"></div>
                 <script type="text/javascript" src="main.js"></script>
             
-            <pre class="door">
-                !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-                !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!                         !!!
-                !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                <pre id="door">
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
              </pre>
              </div>
         </article>
         <article>
-            <pre class="door2">
-                ...............................
-                ...............................
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...                         ...
-                ...............................
+            <pre id="door2">
+...............................
+...............................
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...............................
             </pre>
         </article>
     </section>
