--- a/Project1/index.html
+++ b/Project1/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/main.css">
-    <script src="assets/main.js"> </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/main.css" />
+    <script src="assets/main.js"></script>
     <title>Project 1</title>
-</head>
-<body>
-    <div> 
-        <p> There are some punctuations that are interesting and there are some punctuations that are not.</p>
-   </div>
+  </head>
+  <body>
+    <div>
+      <p>
+        There are some punctuations that are interesting and there are some
+        punctuations that are not.
+      </p>
+    </div>
     <section>
-         <article>
-    <div class="knob" onclick="togglePre()">?</div>
+      <article>
+        <div class="knob" onclick="togglePre()">?</div>
         <pre id="door">
 ???????????????????????????????
 ???????????????????????????????
@@ -40,8 +43,11 @@
 ???                         ???
 ???????????????????????????????
         </pre>
-        
-        <p class="mid"> On Punctuation <br> Colophon </p>
+
+        <p class="mid">
+          On Punctuation <br />
+          Colophon
+        </p>
         <pre id="door2">
 +++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++
@@ -66,12 +72,13 @@
 +++                         +++
 +++                         +++
 +++++++++++++++++++++++++++++++
-            </pre>
-    </article>
+            </pre
+        >
+      </article>
     </section>
-    <div class="chat"> 
-        _You revealed the question and period door! <br>
-        _The question door is slightly opened.
+    <div class="chat">
+      _You revealed the question and period door! <br />
+      _The question door is slightly opened.
     </div>
-</body>
+  </body>
 </html>
