just a lot of work

--- a/Project1/exclamation/index.html
+++ b/Project1/exclamation/index.html
@@ -9,19 +9,56 @@
     <title>Exclamation</title>
 </head>
 <body>
+    <h1>Exclamation Mark</h1>
     <section>
         <article>
             <div>
                 <div id = "typewriter-box"></div>
                 <script type="text/javascript" src="main.js"></script>
             </div>
+            <a href="../question"> <pre id="door"> 
+???????????????????????????????
+???????????????????????????????
+???                         ???
+???                         ???
+???                         ???
+???         Question        ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                     ?   ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???                         ???
+???????????????????????????????
+                        </pre> </a>
+    </article>
+    <article>
             <div> 
-                <pre id="door">
+                <a href="../quotation/"><pre id="door">
 """""""""""""""""""""""""""""""
 """""""""""""""""""""""""""""""
 """                         """
 """                         """
 """                         """
+"""        Quotation        """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                         """
+"""                     "   """
 """                         """
 """                         """
 """                         """
@@ -30,31 +67,25 @@
 """                         """
 """                         """
 """                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""                         """
-"""""""""""""""""""""""""""""""
-                </pre>
-                <pre id="door2">
+"""""""""""""""""""""""""""""""</pre> </a>
+                </div>
+                <div><a href="../guardroom/"><pre id="door">
+
+
+                    
 *******************************
 *******************************
 ***                         ***
 ***                         ***
 ***                         ***
+***        Guardroom        ***
 ***                         ***
 ***                         ***
 ***                         ***
 ***                         ***
 ***                         ***
 ***                         ***
-***                         ***
-***                         ***
+***                      *  ***
 ***                         ***
 ***                         ***
 ***                         ***
@@ -65,15 +96,17 @@
 ***                         ***
 ***                         ***
 *******************************
-                </pre>
+
+
+
+
+                </pre></a>
             </div>
         </article>
     </section>
-    <div class="chat"> 
-        _You entered the exclamation room! <br>
-        _There is a <span class="red">hidden door</span> at the end of the room <br>
-        _You become confused because there are too many doors <br>
-        _There is a strange scent coming from the quotation room <br>
+    <div class="chat">
+    <p> 
+    </p>
     </div>
 </body>
 </html>
