--- a/Project1/greathall/index.html
+++ b/Project1/greathall/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="assets/main.css" />
-    <script src="assets/main.js"></script>
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
     <title>Project 1</title>
   </head>
   <body>
     <div>
-      <h1> The Great Hall</h1>
+      <h1>The Great Hall</h1>
       <p>
         There are some punctuations that are interesting and there are some
         punctuations that are not.
@@ -18,18 +18,19 @@
     </div>
     <section>
       <article>
-        <div class="knob" onclick="togglePre()">?</div>
-        <a href="question"> <pre id="door"> 
+        <a href="../question/">
+          <pre id="door">
+ 
 ???????????????????????????????
 ???????????????????????????????
 ???                         ???
 ???                         ???
 ???                         ???
+???      Question Room      ???
 ???                         ???
 ???                         ???
-???    Let us begin with    ???
-???    the punctuations     ???
-???      that are not       ???
+???                         ???
+???                         ???
 ???                         ???
 ???                         ???
 ???                     ?   ???
@@ -43,19 +44,23 @@
 ???                         ???
 ???                         ???
 ???????????????????????????????
-        </pre> </a>
-
-        <a href="../Week3_Colophon/"> <p class="mid">
-          On Punctuation <br />
-          Colophon
-        </p> </a> 
-        <pre id="door2">
+        </pre
+          >
+        </a>
+        <a href="../../Week3_Colophon/">
+          <p class="mid">
+            On Punctuation <br />
+            Colophon
+          </p>
+        </a>
+        <a href="../break/">
+          <pre id="door">
 +++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++
 +++                         +++
 +++                         +++
 +++                         +++
-+++       Banquet Hall      +++
++++      Banquet Hall       +++
 +++                         +++
 +++                         +++
 +++                         +++
@@ -74,9 +79,12 @@
 +++                         +++
 +++++++++++++++++++++++++++++++
             </pre
-        >
+          >
+        </a>
       </article>
     </section>
+    
+    <script type="text/javascript" src="main.js"></script>
     <div class="chat">
       <p></p>
       <p></p>
