--- a/Project1/question/index.html
+++ b/Project1/question/index.html
@@ -11,24 +11,49 @@
 <body>
     <section>
         <article>
+            <h1> Question Mark</h1>
+            <a href="../"><pre id="door">
+...............................
+...............................
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...     The Great Hall      ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                     .   ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...............................</pre></a>
             <div>
                 <div id = "typewriter-box"></div>
                 <script type="text/javascript" src="main.js"></script>
             
-                <pre id="door">
+                <a href="../exclamation"><pre id="door">
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
+!!!       Exclamation       !!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
-!!!                         !!!
-!!!                         !!!
+!!!                      !  !!!
 !!!                         !!!
 !!!                         !!!
 !!!                         !!!
@@ -39,41 +64,16 @@
 !!!                         !!!
 !!!                         !!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-             </pre>
+
+
+
+
+             </pre></a>
              </div>
-        </article>
-        <article>
-            <pre id="door2">
-...............................
-...............................
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...                         ...
-...............................
-            </pre>
         </article>
     </section>
     <div class="chat"> 
-        _You entered the question room! <br>
-        _There is a hidden door at the end of the room. <br>
-        _You unlocked the exclamation room!
+        <p></p>
     </div>
 </body>
 </html>
