--- a/Project1/quotation/index.html
+++ b/Project1/quotation/index.html
@@ -1,16 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js"> </script>
-<title>Quotations</title>
-</head>
-<body>
-    <div id = "typewriter-box"></div>
-    <script type="text/javascript" src="main.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
+    <title>Quotations</title>
+  </head>
+  <body>
+    
+    <h1> Quotations</h1>
+    <section>
+      <article>
+        <div>
+          <a href="../exclamation">
+            <pre id="door">
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!       Exclamation       !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                     !   !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+                </pre
+            >
+          </a>
+        </div>
+        <div>
+          <a href="../guardroom/">
+            <pre id="door">
+*******************************
+*******************************
+***                         ***
+***                         ***
+***                         ***
+***        Guardroom        ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                      *  ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+***                         ***
+*******************************
 
-</body>
+
+
+                </pre
+            >
+          </a>
+        </div>
+      </article>
+    </section>
+    <div id="typewriter-box"></div>
+    <script type="text/javascript" src="main.js"></script>
+    <div class="chat">
+      <p></p>
+    </div>
+  </body>
 </html>
