--- a/Project1/apostrophe/index.html
+++ b/Project1/apostrophe/index.html
@@ -9,8 +9,38 @@
     <title>Apostrophe</title>
 </head>
 <body>
+    <h1> Apostrophe Room</h1>
     <div id = "typewriter-box"></div>
     <script type="text/javascript" src="main.js"></script>
-
+    <article>
+    <a href="../banquet/"><pre id="door">
++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++
++++                         +++
++++                         +++
++++                         +++
++++      Banquet Hall       +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                     +   +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++++++++++++++++++++++++++++++
+    </pre></a>
+    </article>
+    <div class="chat">
+        <p></p>
+      </div>   
 </body>
 </html>
