--- a/Project1/colons/index.html
+++ b/Project1/colons/index.html
@@ -9,8 +9,68 @@
     <title>Colons</title>
 </head>
 <body>
+    <section>
+        <h1> Colon Room</h1>
+        <article>
+            <a href="../banquet/"><pre id="door">
++++++++++++++++++++++++++++++++
++++++++++++++++++++++++++++++++
++++                         +++
++++                         +++
++++                         +++
++++       Banquet Hall      +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                     +   +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++                         +++
++++++++++++++++++++++++++++++++
+            </pre></a>
+        </article>
+        <article>
     <div id = "typewriter-box"></div>
     <script type="text/javascript" src="main.js"></script>
- 
+    </article> 
+    <article>
+        <a href="../periods/"><pre id="door">
+...............................
+...............................
+...                         ...
+...                         ...
+...                         ...
+...         Periods         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                     .   ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...                         ...
+...............................
+        </pre></a>
+    </article>
+    <div class="chat">
+        <p></p>
+      </div>   
 </body>
 </html>
