--- a/Project1/comma/index.html
+++ b/Project1/comma/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js"> </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
     <title>Colons</title>
-</head>
-<body>
-    <div id = "typewriter-box"></div>
-    <script type="text/javascript" src="main.js"></script>
-
-</body>
+  </head>
+  <body>
+    <section>
+      <h1>Comma Room</h1>
+      <p class="com">What does a comma do.</p>
+      <div id="typewriter-box"></div>
+      <script type="text/javascript" src="main.js"></script>
+      <div id="doors">
+      <a href="../author/">
+        <pre id="door">
+===============================
+===============================
+===_________________________===
+===_________________________===
+===_________________________===
+===_________????????________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_____________________=___===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===_________________________===
+===============================
+        </pre>
+      </a>
+    </div>
+      <div class="chat">
+        <p></p>
+      </div>
+    </section>
+  </body>
 </html>
