--- a/Project1/ending/index.html
+++ b/Project1/ending/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <div id = "typewriter-box"></div>
+
+    <h1> ? ! ; : , " .</h1>
+    <h2> The End</h2>
     <script type="text/javascript" src="main.js"></script>
     
 </body>
