--- a/Project1/exclamation/index.html
+++ b/Project1/exclamation/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js"> </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
     <title>Exclamation</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Exclamation Mark</h1>
     <section>
-        <article>
-            <div>
-                <div id = "typewriter-box"></div>
-                <script type="text/javascript" src="main.js"></script>
-            </div>
-            <a href="../question"> <pre id="door"> 
+      <article>
+        <div>
+          <div id="typewriter-box"></div>
+          <script type="text/javascript" src="main.js"></script>
+        </div>
+        <a href="../question/">
+          <pre id="door">
+ 
 ???????????????????????????????
 ???????????????????????????????
 ???                         ???
@@ -40,11 +42,14 @@
 ???                         ???
 ???                         ???
 ???????????????????????????????
-                        </pre> </a>
-    </article>
-    <article>
-            <div> 
-                <a href="../quotation/"><pre id="door">
+                        </pre
+          >
+        </a>
+      </article>
+      <article>
+        <div>
+          <a href="../quotation/">
+            <pre id="door">
 """""""""""""""""""""""""""""""
 """""""""""""""""""""""""""""""
 """                         """
@@ -67,9 +72,13 @@
 """                         """
 """                         """
 """                         """
-"""""""""""""""""""""""""""""""</pre> </a>
-                </div>
-                <div><a href="../guardroom/"><pre id="door">
+"""""""""""""""""""""""""""""""</pre
+            >
+          </a>
+        </div>
+        <div>
+          <a href="../guardroom/">
+            <pre id="door">
 
 
                     
@@ -100,13 +109,14 @@
 
 
 
-                </pre></a>
-            </div>
-        </article>
+                </pre
+            >
+          </a>
+        </div>
+      </article>
     </section>
     <div class="chat">
-    <p> 
-    </p>
+      <p></p>
     </div>
-</body>
+  </body>
 </html>
