--- a/Project1/greathall/index.html
+++ b/Project1/greathall/index.html
@@ -20,7 +20,6 @@
       <article>
         <a href="../question/">
           <pre id="door">
- 
 ???????????????????????????????
 ???????????????????????????????
 ???                         ???
@@ -53,7 +52,7 @@
             Colophon
           </p>
         </a>
-        <a href="../break/">
+        <a href="../banquet/">
           <pre id="door">
 +++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++
