--- a/Project1/guardroom/index.html
+++ b/Project1/guardroom/index.html
@@ -11,7 +11,39 @@
   <body>
     <h1>Guardroom</h1>
     <div id="typewriter-box"></div>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main.js"></script>        
+    <article>
+    <div>
+        <pre id="door2">
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!       Exclamation       !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                     !   !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!                         !!!
+!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+
+
+            </pre
+        >
+      </a>
+    </div>
     <div>
       <a href="../greathall">
         <pre id="door">
@@ -20,8 +52,8 @@
 ...                         ...
 ...                         ...
 ...                         ...
-...                         ...
 ...     The Great Hall      ...
+...                         ...
 ...                         ...
 ...                         ...
 ...                         ...
@@ -37,10 +69,13 @@
 ...                         ...
 ...                         ...
 ...                         ...
-...............................</pre
+...............................
+
+</pre
         >
       </a>
     </div>
+    </article>
     <div class="chat">
       <p></p>
     </div>
