--- a/Project1/index.html
+++ b/Project1/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div>
-      <h1> The Great Hall</h1>
+      <h1>The Great Hall</h1>
       <p>
         There are some punctuations that are interesting and there are some
         punctuations that are not.
@@ -19,7 +19,9 @@
     <section>
       <article>
         <div class="knob" onclick="togglePre()">?</div>
-        <a href="question"> <pre id="door"> 
+        <a href="question">
+          <pre id="door">
+ 
 ???????????????????????????????
 ???????????????????????????????
 ???                         ???
@@ -43,13 +45,18 @@
 ???                         ???
 ???                         ???
 ???????????????????????????????
-        </pre> </a>
+        </pre
+          >
+        </a>
 
-        <a href="../Week3_Colophon/"> <p class="mid">
-          On Punctuation <br />
-          Colophon
-        </p> </a> 
+        <a href="../Week3_Colophon/">
+          <p class="mid">
+            On Punctuation <br />
+            Colophon
+          </p>
+        </a>
         <pre id="door2">
+          
 +++++++++++++++++++++++++++++++
 +++++++++++++++++++++++++++++++
 +++                         +++
