--- a/Project1/question/index.html
+++ b/Project1/question/index.html
@@ -39,7 +39,7 @@
             <div>
                 <div id = "typewriter-box"></div>
                 <script type="text/javascript" src="main.js"></script>
-            
+                <div id="doors">
                 <a href="../exclamation"><pre id="door">
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -69,6 +69,7 @@
 
 
              </pre></a>
+             </div>
              </div>
         </article>
     </section>
