--- a/Project1/periods/index.html
+++ b/Project1/periods/index.html
@@ -1,16 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script src="main.js"> </script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <script src="main.js"></script>
     <title>Period</title>
-</head>
-<body>
-    <div id = "typewriter-box"></div>
+  </head>
+  <body>
+    <h1>Period Room</h1>
+    <div id="typewriter-box"></div>
     <script type="text/javascript" src="main.js"></script>
 
-</body>
+    <div id="doors">
+      <a href="../colons/">
+        <pre id="door">
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;          Colons         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                     ;   ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;                         ;;;
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+                </pre
+        >
+      </a>
+      <a href="../comma/">
+        <pre id="door">
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,          Comma          ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                     ,   ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,                         ,,,
+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+
+
+
+        </pre>
+      </a>
+    </div>
+    <div class="chat">
+      <p></p>
+    </div>
+  </body>
 </html>
