this might be good idk

--- a/Project1/exclamation/index.html
+++ b/Project1/exclamation/index.html
@@ -12,6 +12,12 @@
     <h1>Exclamation Mark</h1>
     <section>
       <article>
+        <p class="back">
+          !!!!!!!!!!!!!!!!!!!!!!!!!<br>
+          !!!!!!!!!!!!!!!!!!!!!!!!!<br>
+          !!!!!!!!!!!!!!!!!!!!!!!!!<br>
+          !!!!!!!!!!!!!!!!!!!!!!!!!
+        </p>
         <div>
           <div id="typewriter-box"></div>
           <script type="text/javascript" src="main.js"></script>
